fix some issues with the email input and z-index of the nav bar container

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,6 +13,9 @@ body {
 .hide-for-mobile {
     display: none;
 }
+.overflow-hiden {
+    overflow: hidden;
+}
 .get-tobelist {
     display: flex;
     align-items: center;
@@ -134,6 +137,7 @@ h1 {
     height: 100vh;
     width: 100%;
     position: absolute;
+    top: 70px;
     transition: all .5s ease-in-out;
     .menu {
       padding: 40px;
@@ -163,6 +167,7 @@ h1 {
    position: fixed;
    top: 0;
    width: 100%;
+   z-index: 1;
 
 
 
@@ -659,6 +664,7 @@ footer {
             .title-email {
                 form {
                     width: 518px;
+                    margin: 55px 0;
                 }
                 input {
                     width: 518px;
